--- a/editor.css
+++ b/editor.css
@@ -1029,11 +1029,10 @@
     .editor-styles-wrapper ul.wp-block-categories__list[class] a {
       text-decoration: none; }
   .editor-styles-wrapper .wp-block-columns {
-    display: flex;
-    flex-wrap: wrap; }
-    @media (min-width: 782px) {
+    display: flex; }
+    @media not screen and (min-width: 782px) {
       .editor-styles-wrapper .wp-block-columns {
-        flex-wrap: nowrap; } }
+        flex-wrap: wrap; } }
     .editor-styles-wrapper .wp-block-columns:not(:first-child),
     .editor-styles-wrapper .wp-block-columns + * {
       --element-spacing: var(--theme-spacing-fluid-large); }
@@ -1043,26 +1042,26 @@
     .editor-styles-wrapper .wp-block-columns .block-editor-inner-blocks {
       width: 100%; }
   .editor-styles-wrapper .wp-block-column {
-    margin-bottom: 1em;
-    flex-grow: 1;
+    flex: 0 1 100%;
     min-width: 0;
     word-break: break-word;
-    overflow-wrap: break-word; }
-    .editor-styles-wrapper .wp-block-column > :not(:first-child) {
-      --element-spacing: var(--theme-spacing-fluid);
-      margin-top: var(--element-spacing); }
-    @media not screen and (min-width: 600px) {
-      .editor-styles-wrapper .wp-block-column {
-        flex-basis: 100% !important; } }
+    overflow-wrap: break-word;
+    --column-spacing: calc(var(--theme-spacing-fluid-normal) + var(--theme-spacing-fluid-tiny)); }
+    .editor-styles-wrapper .wp-block-column:not(:last-child) {
+      margin-bottom: var(--column-spacing); }
     @media only screen and (min-width: 600px) {
       .editor-styles-wrapper .wp-block-column {
-        flex-basis: 50%;
-        flex-grow: 0; }
+        flex-basis: calc(50% - var(--column-spacing) / 2); }
         .editor-styles-wrapper .wp-block-column:nth-child(2n) {
-          margin-left: var(--element-spacing); } }
-    @media (min-width: 782px) {
+          margin-left: var(--column-spacing); }
+        .editor-styles-wrapper .wp-block-column:last-child:nth-child(2n+1), .editor-styles-wrapper .wp-block-column:nth-last-child(2):nth-child(2n+1),
+        .editor-styles-wrapper .wp-block-column:nth-last-child(2):nth-child(2n+1) + .editor-styles-wrapper .wp-block-column {
+          margin-bottom: 0; } }
+    @media only screen and (min-width: 782px) {
+      .editor-styles-wrapper .wp-block-column[class][class] {
+        margin-bottom: 0; }
       .editor-styles-wrapper .wp-block-column:not(:first-child) {
-        margin-left: var(--element-spacing); } }
+        margin-left: var(--column-spacing); } }
   .editor-styles-wrapper .wp-block-columns.are-vertically-aligned-top {
     align-items: flex-start; }
   .editor-styles-wrapper .wp-block-columns.are-vertically-aligned-center {
