--- a/style.css
+++ b/style.css
@@ -3256,11 +3256,10 @@ span.page-numbers {
 
 /* Columns Blocks */
 .wp-block-columns {
-  display: flex;
-  flex-wrap: wrap; }
-  @media (min-width: 782px) {
+  display: flex; }
+  @media not screen and (min-width: 782px) {
     .wp-block-columns {
-      flex-wrap: nowrap; } }
+      flex-wrap: wrap; } }
   .wp-block-columns:not(:first-child),
   .wp-block-columns + * {
     --element-spacing: var(--theme-spacing-fluid-large); }
@@ -3271,26 +3270,26 @@ span.page-numbers {
     width: 100%; }
 
 .wp-block-column {
-  margin-bottom: 1em;
-  flex-grow: 1;
+  flex: 0 1 100%;
   min-width: 0;
   word-break: break-word;
-  overflow-wrap: break-word; }
-  .wp-block-column > :not(:first-child) {
-    --element-spacing: var(--theme-spacing-fluid);
-    margin-top: var(--element-spacing); }
-  @media not screen and (min-width: 600px) {
-    .wp-block-column {
-      flex-basis: 100% !important; } }
+  overflow-wrap: break-word;
+  --column-spacing: calc(var(--theme-spacing-fluid-normal) + var(--theme-spacing-fluid-tiny)); }
+  .wp-block-column:not(:last-child) {
+    margin-bottom: var(--column-spacing); }
   @media only screen and (min-width: 600px) {
     .wp-block-column {
-      flex-basis: 50%;
-      flex-grow: 0; }
+      flex-basis: calc(50% - var(--column-spacing) / 2); }
       .wp-block-column:nth-child(2n) {
-        margin-left: var(--element-spacing); } }
-  @media (min-width: 782px) {
+        margin-left: var(--column-spacing); }
+      .wp-block-column:last-child:nth-child(2n+1), .wp-block-column:nth-last-child(2):nth-child(2n+1),
+      .wp-block-column:nth-last-child(2):nth-child(2n+1) + .wp-block-column {
+        margin-bottom: 0; } }
+  @media only screen and (min-width: 782px) {
+    .wp-block-column[class][class] {
+      margin-bottom: 0; }
     .wp-block-column:not(:first-child) {
-      margin-left: var(--element-spacing); } }
+      margin-left: var(--column-spacing); } }
 
 .wp-block-columns.are-vertically-aligned-top {
   align-items: flex-start; }
